<!--
  ~ /**
  ~ *Creator: Tobiloba Adejumo on 2/22/19 4:19 PM Last modified: 2/22/19 4:17 PM Copyright: All rights reserved Ⓒ 2019
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
  ~ */
  -->

<resources>
    <string name="app_name">Traffic Bar</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_intro">Traffic bar the best restaurant near you\nfor your hospitality</string>
    <string name="primary_text_second_slide">Best Meal Of The Day</string>
    <string name="secondary_text_second_slide">Create an account in minutes for free\nwith your full name, email address and\nphone number. Your identity will be</string>
    <string name="primary_text_third_slide">High Quality Drinks</string>
    <string name="primary_text_fourth_slide">Book a Table</string>
    <string name="button_get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="sign_up">Sign Up</string>
    <string name="one_over_two">1/2</string>
    <string name="new_account">New Account</string>
    <string name="please_enter_your_full_name">Please enter your full name</string>
    <string name="first_name">FIRST NAME</string>
    <string name="hint_first_name">Enter your first name</string>
    <string name="steps">Steps</string>
    <string name="last_name">LAST NAME</string>
    <string name="hint_last_name">Enter your last name</string>
    <string name="continue_string">Continue</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="two_over_two">2/2</string>
    <string name="please_enter_email">Please enter your email address</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="password">PASSWORD</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="log_in">Log In</string>
    <string name="agree_to_receive_newsletter_and_updates">Agree to receive newsletter and updates</string>
    <string name="access_your_account">Access Your Account</string>
    <string name="please_enter_your_email_password_to_log_in"><![CDATA[Please enter your email & password to log in]]></string>
    <string name="i_forgot_my_password">I forgot my password?</string>
    <string name="nav_home">Home</string>
    <string name="nav_discover">Discover</string>
    <string name="favourites">Favourites</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart">My Cart</string>
    <string name="traffic">Traffic</string>
    <string name="bar">bar</string>
    <string name="mixed_grill">Mixed Grill</string>
    <string name="traffic_breakfast">Traffic Breakfast</string>
    <string name="profile">Profile</string>
    <string name="view_profile">View profile</string>
    <string name="opetoritse_david">Opetoritse David</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ceaser_salad">Ceaser Salad</string>
    <string name="browse">Browse</string>
    <string name="search_for_food_and_drinks">Search for food and drinks</string>
    <string name="change">Change</string>
    <string name="order_for_someone">Order For Someone</string>
    <string name="hello">Hello</string>
    <string name="sample_text_details">Complete Enghlish Breakfast with 2 sausages, Grilled Tomatoes, Minute Steak, Eggs (of your choice) and Mushrooms served with a choice of toast or French Fries</string>
    <string name="card_number">Card Number</string>
    <string name="payment_information">PAYMENT INFORMATION</string>
    <string name="retry">Retry</string>
    <string name="added_to_cart">Added to cart</string>
    <string name="addingToCart">Adding to cart...</string>
    <string name="addTocart">Add to cart</string>
    <string name="checkout">Checkout</string>
</resources>
