<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~ *Creator: Tobiloba Adejumo on 2/25/19 11:39 AM Last modified: 2/25/19 11:39 AM Copyright: All rights reserved Ⓒ 2019
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
  ~    Unless required by applicable law or agreed to in writing, software distributed under
  ~    the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS
  ~    OF ANY KIND, either express or implied. See the License for the specific language governing
  ~    permissions and limitations under the License.
  ~ */
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"

        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_discover"
        android:icon="@drawable/ic_discover_black_24dp"
        android:title="@string/nav_discover" />
<item
    android:id="@+id/nav_cart"
    app:actionLayout="@layout/view_notification_badge"
    android:icon="@drawable/ic_shopping_cart_black_24dp"

    android:title="@string/cart"/>
    <item
        android:id="@+id/nav_favourites"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/favourites" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile" />

</menu>


