<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~ *Creator: Tobiloba Adejumo on 2/22/19 8:53 PM Last modified: 2/22/19 8:53 PM Copyright: All rights reserved Ⓒ 2019
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
  ~    Unless required by applicable law or agreed to in writing, software distributed under
  ~    the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS
  ~    OF ANY KIND, either express or implied. See the License for the specific language governing
  ~    permissions and limitations under the License.
  ~ */
  -->
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:id="@+id/coordinatorLayout"
    android:layout_height="match_parent">


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:weightSum="10"
    tools:context=".registration.register.SignUpActivity">
    

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_weight="4"
        android:background="@drawable/custom"
        android:layout_height="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginTop="48dp"
            android:textSize="@dimen/twenty_sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_over_two"
            android:layout_marginTop="28dp"
            android:textSize="@dimen/twenty_sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/steps"
           android:layout_marginTop="4dp"
            android:textSize="@dimen/sixteen_sp"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_account"
            android:layout_marginTop="28dp"
            android:textSize="@dimen/twenty_four_sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_your_full_name"
            android:layout_marginTop="4dp"
            android:textSize="@dimen/fourteen_sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            />

    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="6"
    >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textview_first_name"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="40dp"
            android:text="@string/first_name"
            android:textColor="@color/app_background"
            android:textSize="12sp"
            android:layout_marginStart="40dp" />

        <EditText
            android:id="@+id/edit_text_first_name"
            android:layout_width="match_parent"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="8dp"
            android:layout_below="@id/textview_first_name"
            android:layout_height="wrap_content"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="@string/hint_first_name"
            android:importantForAutofill="no"


            android:inputType="textCapWords"

            android:singleLine="true"

            android:textColor="@color/black_text"
            tools:targetApi="o" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textview_last_name"
            android:layout_below="@id/edit_text_first_name"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="40dp"
            android:text="@string/last_name"
            android:textColor="@color/app_background"
            android:textSize="12sp"
            android:layout_marginStart="40dp" />

        <EditText
            android:id="@+id/edit_text_last_name"
            android:layout_width="match_parent"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="8dp"
            android:layout_below="@id/textview_last_name"
            android:layout_height="wrap_content"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="@string/hint_last_name"
            android:importantForAutofill="no"


            android:inputType="textCapWords"

            android:singleLine="true"

            android:textColor="@color/black_text"
            tools:targetApi="o" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:id="@+id/button_continue"
            android:layout_marginLeft="40dp"
            android:layout_below="@id/edit_text_last_name"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/red_button"
            android:text="@string/continue_string"
            android:textAllCaps="false"
            android:textColor="@color/white"
         />
        <LinearLayout
            android:layout_width="wrap_content"
                android:id="@+id/linearLayout2"
            android:gravity="center"
          android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_below="@id/button_continue"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/black_text"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                />
            <TextView
                android:layout_width="wrap_content"
                android:textSize="14sp"
                android:id="@+id/textview_log_in"
                android:layout_marginLeft="4dp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content"
                android:text="Log in "/>

        </LinearLayout>



    </RelativeLayout>





</LinearLayout>
</LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>