<?xml version="1.0" encoding="utf-8"?><!--
  ~ /**
  ~ *Creator: Tobiloba Adejumo on 2/22/19 8:53 PM Last modified: 2/22/19 8:53 PM Copyright: All rights reserved Ⓒ 2019
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
  ~    Unless required by applicable law or agreed to in writing, software distributed under
  ~    the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS
  ~    OF ANY KIND, either express or implied. See the License for the specific language governing
  ~    permissions and limitations under the License.
  ~ */
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinatorLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    >


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"

    tools:context=".registration.register.SignUpActivity">

    <!--<fr.castorflex.android.smoothprogressbar.SmoothProgressBar
        android:layout_width="match_parent"
        app:spb_sections_count="2"
        android:id="@+id/progress_view"
        app:spb_color="@color/colorAccent"
        android:indeterminate="true"
        android:layout_height="2dp"
        android:visibility="gone"
        app:layout_collapseMode="pin" />-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@drawable/custom"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="48dp"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty_sp" />


        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/traffic_bar"
            android:layout_marginTop="8dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/access_your_account"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty_four_sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/please_enter_your_email_password_to_log_in"
            android:textColor="@color/white"
            android:textSize="@dimen/fourteen_sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textview_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="32dp"
                android:text="@string/email_address"
                android:textColor="@color/app_background"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/edit_text_email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_email"
                android:layout_below="@id/textview_email"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="40dp"

                android:hint="@string/enter_your_email_address"
                android:importantForAutofill="no"


                android:inputType="textEmailAddress"

                android:singleLine="true"

                android:textColor="@color/black_text"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/textview_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_text_email_address"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="32dp"
                android:text="@string/password"
                android:textColor="@color/app_background"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textview_password"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="40dp"
                android:hint="@string/enter_your_password"
                android:drawableRight="@drawable/ic_password"
                android:importantForAutofill="no"
                android:inputType="textCapWords"
                android:singleLine="true"
                android:textColor="@color/black_text"
                tools:targetApi="o" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_text_password"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/i_forgot_my_password"

                    android:textColor="@color/black_text"
                    android:textSize="@dimen/fourteen_sp"
                     />
            </LinearLayout>

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/red_button"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_below="@id/button_login"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Don't have an account?"
                    android:textColor="@color/black_text"
                    android:textSize="14sp"
                    />

                <TextView
                    android:id="@+id/textview_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="Sign Up"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>
</LinearLayout>


    <include layout="@layout/progress_view_overlay"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>